# cmake-exercise

./: CMakeLists.txt  Dockerfile  main.cpp
